# svetle-axum-monitoring

./: .env  start.sh
backend/: Cargo.toml
backend/src/: .env  main.rs  system.rs
frontend/: package-lock.json  package.json  postcss.config.cjs
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/monitor/: +page.svelte
