[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version="0.6.10", features = ["ws", "macros"]}
dotenv = "0.15.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
sysinfo = "0.28.2"
tokio = { version = "1.26.0", features = ["full"] }
tracing-subscriber = {version = "0.3.16", features = ["env-filter"]}
